make dto more lightweight by using singleton empty collections